change mongodb to mysql5.7+

--- a/.env.example
+++ b/.env.example
@@ -5,11 +5,11 @@ APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
-DB_CONNECTION=mongodb
+DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=27017
-DB_DATABASE=wejh
-DB_USERNAME=
+DB_PORT=3306
+DB_DATABASE=wejh_dev
+DB_USERNAME=root
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
