--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,10 @@ MAIL_ENCRYPTION=null
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
+
+WECHAT_APPID=
+WECHAT_SECRET=
+WECHAT_TOKEN=
+WECHAT_AES_KEY=
+
+WECHAT_LOG_LEVEL=info
