更新env，支持小程序配置

--- a/.env.example
+++ b/.env.example
@@ -43,4 +43,9 @@ WECHAT_LOG_LEVEL=info
 WECHAT_OAUTH_SCOPES=snsapi_userinfo
 WECHAT_ENABLE_MOCK=false
 
+WEAPP_APPID=
+WEAPP_SECRET=
+WEAPP_TOKEN=
+WEAPP_AES_KEY=
+
 JWT_SECRET=
