--- a/.env.example
+++ b/.env.example
@@ -54,3 +54,8 @@ GIT_BRANCH=refs/heads/master
 
 API_COMPATIBLE=false
 API_EXT=false
+
+ANNOUNCEMENT_SHOW=true
+ANNOUNCEMENT_ID=2
+ANNOUNCEMENT_TITLE=公告
+ANNOUNCEMENT_CONTENT=<p>有任何问题，请加QQ群:462530805</p>
