--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -21,6 +21,13 @@ RUN apt-get autoremove --purge -y && apt-get clean && rm -rf /var/lib/apt/lists/
 # Install PHP extensions
 RUN docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd
 
+RUN pecl install xdebug-3.0.2 \
+    && docker-php-ext-enable xdebug \
+    && echo "xdebug.mode=debug\n\
+xdebug.start_with_request=1\n\
+xdebug.client_host=host.docker.internal\n\
+xdebug.discover_client_host=1" > /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+
 # Get latest Composer
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
